--- a/connexion.html
+++ b/connexion.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulaire WEB</title>
+    <title>SECURITY</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" type="image/png" href="./asset/psg.png"/>
+    <link rel="shortcut icon" type="image/png" href="./asset/cadenas.png"/>
 </head>
 <body>
     <header>
         <img
-    src="asset/psg.png"
+    src="asset/cadenas.png"
     >
     <br>
     <h1>
-        <strong>insight</strong> 
-         <p>PSG - Formulaire - Connexion</p>
+        <strong>SECURITY</strong> 
+         <p>SECURITY - Formulaire - Connexion</p>
     </h1>
     </header>
     <main>
