--- a/connexion.html
+++ b/connexion.html
@@ -29,8 +29,8 @@
         <div class="form" role="form">
             <form action="" method="get">
               
-                <label for="email">Votre email</label>
-                <input type="email" name="email" id="email" placeholder="Votre email" aria-required="true">
+                <label for="User">Votre User</label>
+                <input type="user" name="user" id="user" placeholder="Votre User" aria-required="true">
                 <label for="mdp">Votre mot de passe</label>
                 <input type="password" name="mdp" id="mdp" placeholder="Votre mot de passe" aria-required="true">
                 <input type="submit" value="Connexion">
@@ -53,3 +53,4 @@
     </footer>
 </body>
 </html>
+
